test/runnable/hello-world.nz.ast.tata
file-ast(
	imports: ports(range(0, 29), [import-ast(0, "/io", some([exit-code, print]))])
	specs: []
	aliases: []
	structs: []
	funs: [
		fun-decl(
			public?: true
			sig: sig-ast(
				range(29, 58)
				main
				inststruct(range(34, 47), name-range(34, fut), [inststruct(range(38, 47), name-range(38, exit-code))])
				[
					param(
						range(48, 57)
						none
						inststruct(range(50, 57), name-range(50, arr), [inststruct(range(54, 57), name-range(54, str))]))])
			summon: true
			body: seq-ast(
				call(prefix, name-range(67, print), [], [literal("Hello, world!")])
				call(infix, name-range(93, resolved), [], [literal(nat(0, false))])))])
