test/parse-errors/match-without-indent.nz.ast.tata
file-ast(
	specs: []
	aliases: []
	structs: []
	funs: [fun-decl(public?: true, sig: sig-ast(range(0, 8), f, inststruct(range(2, 6), name-range(2, void)), []), body: bogus)])
